WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36897
REGRESSION (
r56429
): Flash ads are clipped when main page is scrolled (boxofficemojo.com)
https://bugs.webkit.org/show_bug.cgi?id=36897
Summary
REGRESSION (r56429): Flash ads are clipped when main page is scrolled (boxoff...
Alexey Proskuryakov
Reported
2010-03-31 12:09:19 PDT
1. Visit boxofficemojo.com 2. Scroll the page vertically Results: The tops of the Flash ads at the top and along the right side of the page are clipped out. This happens when using the version of Flash that currently ships with Mac OS X. <
rdar://problem/7804018
>
Attachments
proposed fix
(6.25 KB, patch)
2010-03-31 12:40 PDT
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-03-31 12:40:31 PDT
Created
attachment 52197
[details]
proposed fix
mitz
Comment 2
2010-03-31 12:42:58 PDT
Comment on
attachment 52197
[details]
proposed fix Thanks for fixing this!
> + IntRect m_clipRect; // The rectangle needs to remain correct after scrolling, so storing it in frame view coordinates, and not clipped to window.
I would say “content view coordinates”. r=me
Eric Seidel (no email)
Comment 3
2010-03-31 12:44:10 PDT
Attachment 52197
[details]
did not build on mac: Build output:
http://webkit-commit-queue.appspot.com/results/1612107
Darin Adler
Comment 4
2010-03-31 12:44:21 PDT
Comment on
attachment 52197
[details]
proposed fix
> +#include "CString.h"
Please don't add this. Or you could state why you need to add it.
> - IntRect m_windowClipRect; > + IntRect m_clipRect; // The rectangle needs to remain correct after scrolling, so storing it in frame view coordinates, and not clipped to window.
I would say "it is stored" rather than "storing it" here.
Alexey Proskuryakov
Comment 5
2010-03-31 12:49:18 PDT
Committed <
http://trac.webkit.org/changeset/56858
>.
Simon Fraser (smfr)
Comment 6
2010-03-31 13:06:25 PDT
Comment on
attachment 52197
[details]
proposed fix
> Index: WebCore/rendering/RenderWidget.cpp
> +#include "CString.h"
Was this an intentional part of the change?
Alexey Proskuryakov
Comment 7
2010-03-31 13:12:45 PDT
Addressed additional review comments in <
http://trac.webkit.org/changeset/56859
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug