        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=36897
        <rdar://problem/7804018> REGRESSION (r56429): Flash ads are clipped when main page is scrolled (boxofficemojo.com)

        * manual-tests/plugin-in-iframe-scroll.html: Added.
        * manual-tests/resources/plugin-in-iframe-scroll-iframe.html: Added.

        * rendering/RenderWidget.cpp:
        (WebCore::RenderWidget::setWidgetGeometry): This method isn't called when an iframe containing
        the widget moves, so we should store a value that is not dependent on current scroll offset.
        (WebCore::RenderWidget::windowClipRect): Apply scroll offset and window clip now.

        * rendering/RenderWidget.h: Renamed m_windowClipRect to m_clipRect, because it is no longer
        in window coordinates.

        * WebCore.base.exp: Export RenderWidget::windowClipRect(), since it's no longer inline.



git-svn-id: svn://svn.chromium.org/blink/trunk@56858 bbb929c8-8fbe-4397-9dbb-9b2b20218538