third_party/WebKit/WebCore/rendering/RenderWidget.h
@@ -1,7 +1,7 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 /*
  * Copyright (C) 1999 Lars Knoll (knoll@kde.org)
- * Copyright (C) 2004, 2005, 2006, 2009 Apple Inc. All rights reserved.
+ * Copyright (C) 2004, 2005, 2006, 2009, 2010 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -41,7 +41,7 @@ public:
 
     void updateWidgetPosition();
     void widgetPositionsUpdated();
-    IntRect windowClipRect() const { return m_windowClipRect; }
+    IntRect windowClipRect() const;
 
     void showSubstituteImage(PassRefPtr<Image>);
 
@@ -75,7 +75,7 @@ private:
     RefPtr<Widget> m_widget;
     RefPtr<Image> m_substituteImage;
     FrameView* m_frameView;
-    IntRect m_windowClipRect;
+    IntRect m_clipRect; // The rectangle needs to remain correct after scrolling, so storing it in content view coordinates, and not clipped to window.
     int m_refCount;
 };
 
